[package]
name = "rbuild-runtime"
version = "0.1.0"
authors = ["cuisongliu <cuisongliu@qq.com>"]
edition = "2021"
description = "rbuild-runtime, a rusty-hermit application.\n\nversion description: https://sealos.io/docs/5.0.0/developer-guide/lifecycle-management/quick-start/deploy-kubernetes#kubernetes-compatibility-with-containerd"
repository = "https://github.com/labring-actions/rbuild-runtime"
license-file = "LICENSE"
[dependencies]
rust-embed = "8.4.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
colored = "2.1.0"
log = "0.4"
chrono = "0.4"
env_logger = "0.11.6"
enum_dispatch = "0.3.13"
tracing-subscriber = "0.3.18"
anyhow = "1.0.95"
reqwest = "0.12.9"
pulldown-cmark = "0.12.2"
serde_json = "1.0"
linked-hash-map = "0.5.6"
[build-dependencies]
reqwest = "0.12.5"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.95"
pulldown-cmark = "0.12.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
linked-hash-map = "0.5"
[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
